<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_telas"
    tools:context=".Splash">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="173dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/logo_nome" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="394dp"
        android:layout_height="232dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/img_jogo" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="338dp"
        android:gravity="center|center"
        android:textColor="@color/white"
        android:text="@string/title_main"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="249dp"
        android:gravity="center|center"
        android:text="@string/text_main"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="196dp"
        android:gravity="center|center"
        android:text="@string/text2_main"
        android:textColor="@color/white"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="113dp"
        android:gravity="center|center"
        android:text="@string/text3_main"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/menu_hamb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        app:srcCompat="@drawable/menu" />


</RelativeLayout>