<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_telas"
    tools:context=".Avaliacao">

    <ImageView
        android:id="@+id/menu_hamb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        app:srcCompat="@drawable/menu" />


    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="139dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_nome" />

    <ImageView
        android:id="@+id/img_voltar"
        android:layout_width="36dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="84dp"
        app:srcCompat="@drawable/flecha"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="103dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/title_avaliacao"
        android:textColor="@color/white"
        android:textSize="26dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="248dp"
        android:gravity="center"
        android:text="@string/text2_avaliacao"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="359dp"
        android:gravity="center"
        android:text="@string/text3_avaliacao"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="247dp"
        android:gravity="center"
        android:text="@string/comentario_avaliacao"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="46dp"
        android:gravity="center"
        android:text="@string/text_avaliacao"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edt_avaliacao"
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="281dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Escreva o título"
        android:inputType="textPersonName"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/edt_comentario"
        android:layout_width="372dp"
        android:layout_height="155dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="left"
        android:hint="Comentário"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="7dp" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="17dp"
        android:text="Enviar"

        android:background="@drawable/fundo_button_avaliacao"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="30dp"/>

    <RatingBar
        android:id="@+id/rtb_avaliar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="297dp"
        android:contentDescription="Este será o método de avaliação"
        android:progressTint="@color/yellow" />
</RelativeLayout>