<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_telas"
    tools:context=".Historia_jogo">

    <ImageView
        android:id="@+id/menu_hamb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        app:srcCompat="@drawable/menu" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="157dp"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/logo_nome" />

    <ImageView
        android:id="@+id/img_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="76dp"
        app:srcCompat="@drawable/flecha" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="322dp"
        android:layout_height="188dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="108dp"
        app:srcCompat="@drawable/img_jogo2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="69dp"
        android:gravity="center|center"
        android:text="@string/text1_historiajogo"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="9dp"
        android:gravity="center|center"
        android:text="@string/text2_historiajogo"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="460dp"
        android:gravity="center|center"
        android:text="@string/text3_historiajogo"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="126dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="21dp"
        app:srcCompat="@drawable/img_fundo_pumarosa" />


    <ImageView
        android:id="@+id/image_fundo_xamaveloz"
        android:layout_width="126dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="214dp"
        android:layout_marginBottom="22dp"
        app:srcCompat="@drawable/img_fundo_xamaveloz" />

    <ImageView
        android:id="@+id/image_fundo_xm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="228dp"
        android:layout_marginBottom="25dp"

        app:srcCompat="@drawable/img_xama_veloz" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="26dp"

        app:srcCompat="@drawable/img_puma_rosa" />

    <ImageView
        android:id="@+id/image_fundo_he"
        android:layout_width="126dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="214dp"
        android:layout_marginBottom="145dp"
        app:srcCompat="@drawable/img_fundo_homemespacial" />

    <ImageView
        android:id="@+id/images_fundo_he"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="233dp"
        android:layout_marginBottom="145dp"

        app:srcCompat="@drawable/img_homem_espacial" />

    <ImageView
        android:id="@+id/image_fundo_sp"
        android:layout_width="126dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="144dp"
        app:srcCompat="@drawable/img_fundo_saponinja" />

    <ImageView
        android:id="@+id/imagesp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="146dp"

        app:srcCompat="@drawable/img_sapo_ninja" />


</RelativeLayout>